--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,11 @@ click==8.3.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
+cron_descriptor==2.0.6
 dj-database-url==3.1.2
-Django==6.0.2
+Django==5.2.11
+django-celery-beat==2.8.1
+django-timezone-field==7.2.1
 gunicorn==25.1.0
 h11==0.16.0
 idna==3.11
@@ -25,6 +28,7 @@ packaging==26.0
 prompt_toolkit==3.0.52
 psycopg2-binary==2.9.11
 PySocks==1.7.1
+python-crontab==3.3.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytz==2025.2
